Lightsabers, fighters and combats